# EILC

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  embedding-ilc.cabal  hie.yaml  hie.yaml.bak  runbench.sh  stack.yaml
bench/: BenchUtil.hs  FilterBench.hs  ForProfiling.hs  SequenceBench.hs
bench/Examples/: Average.hs  Filter.hs  Sequence.hs
benchmark_results/: 2021-10-21T0131.html  2021-11-26T1438.html  2021-11-26T1748.html  2021-11-26T2202.html  2021-11-26T2214.html  2021-12-10T1949.html  2021-12-22T1756.html  2021-12-23T1811.html  2021-12-23T1822.html  sequence-2022-02-24T2352.html  sequence-2022-02-27T2146.html  sequence-2022-02-27T2150.html  sequence-2022-03-01T0012.html  tree-2021-12-23T1949.html  tree-2022-02-24T2351.html  tree-2022-02-27T2149.html
notes/: working_note.md
notes/meeting_doc_Nov_2021/: Makefile  macro.tex  main.bib  main.tex
src/: EILC.hs  notes.md
src/Data/: Code.hs  Conn.hs  Delta.hs  Env.hs  IF.hs  IFFT.hs  IFq.hs  IFqT.hs  IFqTE.hs  IFqTEU.hs  IFqTU.hs  Incrementalized.hs  Interaction.hs  JoinList.hs
src/Data/Code/: Lifting.hs
src/Data/Incrementalized/: Bag.hs  Bool.hs  Either.hs  Fixed.hs  Function.hs  Group.hs  Numeric.hs  Seq.hs
src/Data/Incrementalized/Bag/: Core.hs
src/Data/Incrementalized/Seq/: Core.hs
src/Examples/: Average.hs  Sequence.hs
src/Language/: Unembedding.hs
src/Language/Unembedding/: PseudoFunction.hs
src8/Data/Code/: CodeType.hs
src9/Data/Code/: CodeType.hs
test/: Spec.hs  TestNum.hs  doctests.hs
test/Data/: DeltaSpec.hs  IncrementalizedSpec.hs
test/Data/Incrementalized/: BagSpec.hs  BoolSpec.hs  FunctionSpec.hs  FunctionSpecCore.hs  GroupSpec.hs  NumericSpec.hs  SeqSpec.hs
