cabal-version:      2.4
name:               embedding-ilc
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kazutaka Matsuda
maintainer:         kztk@ecei.tohoku.ac.jp

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

flag dump 
    description: Dump several compiler outputs in benchmarks
    default: False 
    manual:  True 

common deps
    build-depends: 
        base ^>= 4.13 || ^>= 4.14, 
        template-haskell, 
        containers, 
                   
    default-language: Haskell2010

    ghc-options: -Wall

library
    import: deps 
    exposed-modules:  
        Data.Code 
        Data.Code.Lifting
        Data.Conn 
        Data.Delta 
        Data.Env        
        Data.Interaction 
        Data.Incrementalized
        Data.Incrementalized.Function 
        Data.IFq
        Data.IFqT 
        Data.IFqTE 
        Data.IFqTEU
        Data.IFFT  
        Language.Unembedding        
        EILC

    -- Modules included in this library but not exported.
    other-modules:
--        Data.IF  

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

benchmark sequence 
    import: deps 
    type: exitcode-stdio-1.0
    default-language: Haskell2010     
    hs-source-dirs: bench, 
                    src 
    main-is: SequenceBench.hs 
    other-modules: 
        Examples.Sequence 
    other-extensions: TemplateHaskell 
    build-depends: 
        criterion, 
--        embedding-ilc, 
        deepseq 
    ghc-options: 
        -O2
    if flag(dump) 
        ghc-options: 
            -dppr-cols=200 -dsuppress-all -ddump-to-file -ddump-splices -ddump-simpl

test-suite embedding-ilc-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base 
