cabal-version:      2.4
name:               embedding-ilc
version:            0.2.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kazutaka Matsuda
maintainer:         kztk@ecei.tohoku.ac.jp

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

flag dump 
    description: Dump several compiler outputs in benchmarks
    default: False 
    manual:  True 

common deps
    build-depends: 
        base ^>= 4.13 || ^>= 4.14 || ^>= 4.15, 
--        mtl ^>= 2.2,  
        template-haskell ^>= 2.16 || ^>= 2.17, 
        containers ^>= 0.6, deepseq, 
        groups ^>= 0.5  
                   
    default-language: Haskell2010

    ghc-options: 
                 -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
                 -Wredundant-constraints
                 -Wnoncanonical-monad-instances
    if impl(ghc >= 8.2)
      ghc-options:       -fhide-source-paths
    if impl(ghc >= 8.4)
      ghc-options:       -Wmissing-export-lists
                         -Wpartial-fields
    if impl(ghc >= 8.8)
      ghc-options:       -Wmissing-deriving-strategies
                         -fwrite-ide-info
                         -hiedir=.hie
    if impl(ghc >= 8.10)
      ghc-options:       -Wunused-packages                 

library
    import: deps 
    exposed-modules:  
        Data.Code 
        Data.Code.Lifting
        Data.Conn 
        Data.Delta 
        Data.Env        
        Data.Interaction 
        Data.Incrementalized
        Data.Incrementalized.Seq
        Data.Incrementalized.Fixed 
        Data.Incrementalized.Numeric 
        Data.Incrementalized.Function 
        Data.Incrementalized.Bool
        Data.Incrementalized.Group
        Data.Incrementalized.Either 
        Data.Incrementalized.Bag 
        Data.JoinList 
        Data.IF
        Data.IFq
        Data.IFqT 
        Data.IFqTU
        -- Data.IFqTE 
        -- Data.IFqTEU
        -- Data.IFFT  
        Language.Unembedding        
        Language.Unembedding.PseudoFunction
        EILC

    other-modules:
        Data.Code.CodeType
        -- To avoid GHC's bug.
        Data.Incrementalized.Bag.Core
        Data.Incrementalized.Seq.Core
        
    hs-source-dirs:   src

    if impl(ghc >= 9) 
       hs-source-dirs: src9
    else 
       hs-source-dirs: src8

benchmark sequence 
    import: deps 
    type: exitcode-stdio-1.0
    default-language: Haskell2010     
    hs-source-dirs: bench
    main-is: SequenceBench.hs 
    other-modules: 
        BenchUtil 
        Examples.Sequence 
    other-extensions: TemplateHaskell 
    build-depends: 
        criterion, 
        embedding-ilc, 
        deepseq 
    ghc-options: 
        -O2
    if flag(dump) 
        ghc-options: 
            -dppr-cols=200 -dsuppress-all -ddump-to-file -ddump-splices -ddump-simpl

benchmark prof 
    import: deps
    type: exitcode-stdio-1.0
    default-language: Haskell2010     
    hs-source-dirs: bench
    main-is: ForProfiling.hs 
    other-modules: 
        Examples.Filter
    other-extensions: TemplateHaskell 
    build-depends: 
        embedding-ilc, 
        deepseq 
    ghc-options: 
        -O2 -rtsopts
    if flag(dump) 
        ghc-options: 
            -dppr-cols=200 -dsuppress-all -ddump-to-file -ddump-splices -ddump-simpl

benchmark tree
    import: deps
    type: exitcode-stdio-1.0
    default-language: Haskell2010     
    hs-source-dirs: bench
    main-is: FilterBench.hs 
    other-modules: 
        BenchUtil 
        Examples.Filter
    other-extensions: TemplateHaskell 
    build-depends: 
        criterion, 
        embedding-ilc, 
        deepseq 
    ghc-options: 
        -O2
    if flag(dump) 
        ghc-options: 
            -dppr-cols=200 -dsuppress-all -ddump-to-file -ddump-splices -ddump-simpl


common tests 
    default-language: Haskell2010
    build-depends:    
       base, containers, template-haskell, groups, 
       QuickCheck ^>= 2.12 || ^>= 2.13 || ^>= 2.14, 
       hspec  ^>= 2.8 || ^>= 2.9, 
       embedding-ilc 
    ghc-options: 
       -Wall
       -Wcompat


test-suite embedding-ilc-test
    import:           tests 
    hs-source-dirs:   test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules: 
        Data.DeltaSpec                          
        Data.IncrementalizedSpec 
        Data.Incrementalized.GroupSpec 
        Data.Incrementalized.FunctionSpec 
        Data.Incrementalized.NumericSpec 
        Data.Incrementalized.BoolSpec 
        Data.Incrementalized.BagSpec 
        Data.Incrementalized.FunctionSpecCore
        Data.Incrementalized.SeqSpec 
        
    if flag(dump) 
        ghc-options: 
            -dppr-cols=200 -dsuppress-all -ddump-to-file -ddump-splices -ddump-simpl

-- test-suite embedding-ilc-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:    base 

-- test-suite doctests         
--     default-language: Haskell2010
--     type:          exitcode-stdio-1.0
--     hs-source-dirs: test 
--     ghc-options:   -threaded
--     main-is:       doctests.hs
--     build-depends: base, doctest >= 0.8, QuickCheck, embedding-ilc